fix padding pushing project off screen on mobile

--- a/style.css
+++ b/style.css
@@ -308,6 +308,10 @@ nav{
         padding-bottom: 150px;
     }
 
+    #project-container{
+        padding: 50px;
+    }
+
     .project {
         flex-direction: column !important;
         height: auto;
